--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,16 @@ services:
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
+      VIRTUAL_HOST: avertguard.com,www.avertguard.com
+      VIRTUAL_PORT: 80
+      LETSENCRYPT_HOST: avertguard.com,www.avertguard.com
+      WORDPRESS_CONFIG_EXTRA: |
+        define('WP_HOME', 'https://avertguard.com');
+        define('WP_SITEURL', 'https://avertguard.com');
+        define('FORCE_SSL_ADMIN', true);
+        if (isset($_SERVER['HTTP_X_FORWARDED_PROTO']) && $_SERVER['HTTP_X_FORWARDED_PROTO'] == 'https') {
+            $_SERVER['HTTPS'] = 'on';
+        }
     volumes:
       - ./wp_data:/var/www/html
       - ./php.ini:/usr/local/etc/php/conf.d/uploads.ini
