--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,10 +29,17 @@ services:
       VIRTUAL_PORT: 80
       LETSENCRYPT_HOST: avertguard.com,www.avertguard.com
       WORDPRESS_CONFIG_EXTRA: |
-        define('WP_HOME', 'https://avertguard.com');
-        define('WP_SITEURL', 'https://avertguard.com');
+        if (!defined('WP_DEBUG')) {
+            define('WP_DEBUG', false);
+        }
+        if (!defined('WP_HOME')) {
+            define('WP_HOME', 'https://avertguard.com');
+        }
+        if (!defined('WP_SITEURL')) {
+            define('WP_SITEURL', 'https://avertguard.com');
+        }
         define('FORCE_SSL_ADMIN', true);
-        if (isset($_SERVER['HTTP_X_FORWARDED_PROTO']) && $_SERVER['HTTP_X_FORWARDED_PROTO'] == 'https') {
+        if (isset($_SERVER['HTTP_X_FORWARDED_PROTO']) && $_SERVER['HTTP_X_FORWARDED_PROTO'] === 'https') {
             $_SERVER['HTTPS'] = 'on';
         }
     volumes:
