--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,23 +29,11 @@ services:
       VIRTUAL_PORT: 80
       LETSENCRYPT_HOST: avertguard.com,www.avertguard.com
       WORDPRESS_CONFIG_EXTRA: |
-        if (!defined('WP_DEBUG')) {
-            define('WP_DEBUG', false);
-        }
-        if (!defined('WP_HOME')) {
-            define('WP_HOME', 'https://avertguard.com');
-        }
-        if (!defined('WP_SITEURL')) {
-            define('WP_SITEURL', 'https://avertguard.com');
-        }
-        define('FORCE_SSL_ADMIN', true);
-        $http_x_forwarded_proto = $_SERVER['HTTP_X_FORWARDED_PROTO'] ?? '';
-        if ($http_x_forwarded_proto === 'https') {
-            $_SERVER['HTTPS'] = 'on';
-        }
+        // Configuration is now in wp-config-docker.php
     volumes:
       - ./wp_data:/var/www/html
       - ./php.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - ./wp-config-docker.php:/var/www/html/wp-config-docker.php
     depends_on:
       - db
 
